# erosion-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  example.erss  inspector.html  script.erss  script.example.erss  statistics.json
output/: inspector.html
output/saved/2023-05-29/: heightmap.json  heightmap_diff.json  heightmap_eroded.json
output/saved/2023-07-02/: heightmap.json  heightmap_diff.json  heightmap_eroded.json
output/saved/2023-07-02_2/: heightmap.json  heightmap_diff.json  heightmap_eroded.json
output/saved/2023-07-02_3/: heightmap.json  heightmap_diff.json  heightmap_eroded.json
output/saved/2023-07-02_4/: heightmap.json  heightmap_diff.json  heightmap_eroded.json
output/saved/2023-10-11/: heightmap.json  heightmap_diff.json  heightmap_eroded.json
scripts/: animation-script.erss
src/: engine.rs  erode.rs  heightmap.rs  io.rs  main.rs  math.rs  partitioning.rs  visualize.rs
src/engine/: scripts.rs
src/erode/: beyer.rs  lague.rs  mod.rs
src/generate_tests/: mod.rs
src/heightmap/: io.rs  mod.rs
src/visualize/: app_state.rs  beyer.rs  canvas.rs  events.rs  keybinds.rs  lague.rs  mod.rs  panels.rs  ui.rs  widgets.rs  wrappers.rs
