[package]
name = "erosion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ds-heightmap = "0.1.2"
egui = "0.21.0"
egui-macroquad = "0.15.0"
image = "0.24.6"
macroquad = "0.3.25"
nalgebra-macros = "0.2.0"
progress = "0.2.0"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
