[package]
name = "erosion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-noise = "0.8.7"
egui = "0.21.0"
egui-macroquad = "0.15.0"
image = { version = "0.24.6", optional = true }
macroquad = "0.3.25"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
getrandom = { version = "0.2" }
rayon = "1.8.0"

[features]
default = ["wasm"]
export = ["dep:image"]
wasm = ["getrandom/js"]